i18n added for all, but the exceptions in the dtos

--- a/src/main/resources/templates/fragments/footers.html
+++ b/src/main/resources/templates/fragments/footers.html
@@ -8,19 +8,19 @@
         <footer class="container bg-secondary">
             <ul class="nav justify-content-center pb-3 mb-3">
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
+                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{footerHome}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
+                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{features}">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
+                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{pricing}">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
+                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{faqs}">FAQs</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link px-2 text-white fs-5">About</a>
+                    <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{about}">About</a>
                 </li>
             </ul>
             <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
