--- a/src/main/resources/templates/question-answer.html
+++ b/src/main/resources/templates/question-answer.html
@@ -109,7 +109,8 @@
                     <div class="row w-100">
                         <div class="col text-center">
                             <button class="btn btn-secondary border border-2 border-black fs-4 px-4"
-                                    type="submit">submit
+                                    type="submit"
+                                    th:text="#{submit}">submit
                             </button>
                         </div>
                     </div>
