--- a/src/main/resources/templates/user-profile-edit.html
+++ b/src/main/resources/templates/user-profile-edit.html
@@ -7,7 +7,7 @@
     <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column flex-fill align-item-center justify-content-center gap-3 flex-grow-1">
-        <h1 class="text-center">My Profile</h1>
+        <h1 class="text-center" th:text="#{myProfile}">My Profile</h1>
         <div class="row bg-secondary shadow rounded border border-2 border-black p-3">
             <div class="col-sm-12 col-md-5 mb-3 mb-sm-3 mb-md-0 d-flex flex-column align-items-center gap-2">
                 <img
@@ -17,7 +17,8 @@
                         height="300px"
                         class="shadow rounded-circle border border-2 border-black"
                 />
-                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50 fs-5">
+                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50 fs-5"
+                        th:text="#{change}">
                     change
                 </button>
             </div>
@@ -32,7 +33,7 @@
                          th:errors="*{username}"
                          th:if="${#fields.hasErrors('username')}">
                     </div>
-                    <div th:if="${invalidUsername}" class="text-warning fs-6">This username is
+                    <div th:if="${invalidUsername}" class="text-warning fs-6" th:text="#{usernameInUse}">This username is
                         already in use.
                     </div>
                     <input
@@ -67,7 +68,7 @@
                          th:errors="*{email}"
                          th:if="${#fields.hasErrors('email')}">
                     </div>
-                    <div th:if="${invalidEmail}" class="text-warning fs-6">This email is
+                    <div th:if="${invalidEmail}" class="text-warning fs-6" th:text="#{emailInUse}">This email is
                         already in use.
                     </div>
                     <input
@@ -80,7 +81,7 @@
                          th:errors="*{phone}"
                          th:if="${#fields.hasErrors('phone')}">
                     </div>
-                    <div th:if="${invalidPhone}" class="text-warning fs-6">This phone is
+                    <div th:if="${invalidPhone}" class="text-warning fs-6" th:text="#{phoneInUse}">This phone is
                         already in use.
                     </div>
                     <input
@@ -98,11 +99,13 @@
                             type="text">
                     <div class="d-flex justify-content-center gap-2 w-100">
                         <button class="btn btn-success rounded shadow text-center text-black border border-black border-2 w-50 fs-5"
-                                type="submit">
+                                type="submit"
+                                th:text="#{save}">
                             save
                         </button>
                         <a th:href="@{/user/profile}"
-                           class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50 fs-5">
+                           class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50 fs-5"
+                           th:text="#{cancel}">
                             cancel
                         </a>
                     </div>
@@ -111,7 +114,8 @@
         </div>
         <div class="row justify-content-center text-center">
             <div class="col-sm-8 col-md-4">
-                <button class="btn btn-danger rounded shadow text-center text-black border border-black border-2 fs-5 px-3">
+                <button class="btn btn-danger rounded shadow text-center text-black border border-black border-2 fs-5 px-3"
+                        th:text="#{deleteAccount}">
                     Delete Account
                 </button>
             </div>
