--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -37,27 +37,30 @@
                             class="nav-link text-center text-dark fs-5 link-light active"
                             aria-current="page"
                             th:href="@{/user/home}"
+                            th:text="#{headerHome}"
                     >Home</a>
                     <a
                             class="nav-link text-center text-dark fs-5 link-light active"
                             aria-current="page"
                             th:href="@{/test/join}"
+                            th:text="#{joinTest}"
                     >Join Test</a>
                     <a
                             class="nav-link text-center text-dark fs-5 link-light"
                             th:href="@{/test/create}"
+                            th:text="#{createTest}"
                     >Create Test</a>
-                    <a class="nav-link text-center text-dark fs-5 link-light" href="#"
-                    >My Results</a>
-                    <a class="nav-link text-center text-dark fs-5 link-light" href="#"
-                    >My Tests</a>
+                    <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myResults}">My Results</a>
+                    <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myTests}">My Tests</a>
                     <a class="nav-link text-center text-dark fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                       th:text="#{allTests}"
                     >All Tests</a>
                     <a class="nav-link text-center text-dark fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                       th:text="#{allUsers}"
                     >All Users</a>
                 </div>
                 <div class="navbar-nav ms-auto">
@@ -68,6 +71,7 @@
                         <button
                                 class="bnt bg-light rounded shadow px-3 py-2 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
                                 type="submit"
+                                th:text="#{logout}"
                         >
                             Log out
                         </button>
