--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -4,22 +4,24 @@
 <body class="bg-secondary vh-100 d-flex justify-content-center align-items-center font">
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="bg-light p-5 border border-black border-3 shadow rounded fs-5">
-        <h2 class="text-center">Login</h2>
+        <h2 class="text-center" th:text="#{login}">Login</h2>
         <form action="#"
               class="d-flex flex-column"
               method="post"
               novalidate
               th:action="@{/account/login}"
               th:object="${userSignInData}">
-            <div th:if="${error}" class="text-danger fs-6 text-center">invalid credentials</div>
-            <label for="username" class="form-label">Username:</label>
+            <div th:if="${error}" class="text-danger fs-6 text-center" th:text="#{invalidCredentials}">
+                invalid credentials
+            </div>
+            <label for="username" class="form-label" th:text="#{loginUsername}">Username:</label>
             <div class="input-group">
                 <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
                 <input
                         aria-describedby="inputGroupPrepend"
                         class="form-control border border-black fs-6"
                         id="username"
-                        placeholder="Enter username"
+                        th:placeholder="#{enterUsername}"
                         required
                         th:field="*{username}"
                         type="text"
@@ -29,13 +31,13 @@
                     th:if="${#fields.hasErrors('username')}"
                     th:errors="*{username}"
                     class="text-danger fs-6"></div>
-            <label for="password" class="form-label">Password:</label>
+            <label for="password" class="form-label" th:text="#{loginPassword}">Password:</label>
             <div class="input-group">
                 <input
                         class="form-control border border-black fs-6"
                         id="password"
                         name="password"
-                        placeholder="Enter password"
+                        th:placeholder="#{enterPassword}"
                         required
                         th:field="*{password}"
                         type="password"
@@ -48,6 +50,7 @@
             <button
                     type="submit"
                     class="btn btn-secondary border border-black border-2 shadow rounded fs-5 mt-3"
+                    th:text="#{signIn}"
             >
                 Sign In
             </button>
