--- a/src/main/resources/templates/test-create.html
+++ b/src/main/resources/templates/test-create.html
@@ -14,10 +14,10 @@
                     novalidate
                     th:action="@{/test/create}"
                     th:object="${testCreateData}">
-                <h1 class="text-center">Create Test</h1>
+                <h1 class="text-center" th:text="#{createTest}">Create Test</h1>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="name" class="form-label">Test name:</label>
+                        <label for="name" class="form-label" th:text="#{testName}">Test name:</label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="description" class="form-label">Description:</label>
+                        <label for="description" class="form-label" th:text="#{description}">Description:</label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -50,7 +50,7 @@
                                     id="description"
                                     maxlength="50"
                                     name="description"
-                                    placeholder="(optional)"
+                                    th:placeholder="#{optional}"
                                     th:classappend="${#fields.hasErrors('description')} ? 'is-invalid' : ''"
                                     th:field="*{description}"
                                     type="text"
@@ -64,7 +64,7 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="code" class="form-label">Code:</label>
+                        <label for="code" class="form-label" th:text="#{testCode}">Code:</label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation gap-1">
@@ -80,7 +80,9 @@
                             />
                             <button class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
                                     onclick="generateCode()"
-                                    type="button">Generate
+                                    type="button"
+                                    th:text="#{generate}">
+                                generate
                             </button>
                         </div>
                         <div class="text-warning fs-6"
@@ -91,8 +93,9 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="responseTime" class="form-label"
-                        >Time for response:</label>
+                        <label for="responseTime" class="form-label" th:text="#{timeForResponse}">
+                            Time for response:
+                        </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -100,7 +103,7 @@
                                     class="form-control border border-black fs-5"
                                     id="responseTime"
                                     name="responseTime"
-                                    placeholder="(in minutes)"
+                                    th:placeholder="#{inMinutes}"
                                     required
                                     th:classappend="${#fields.hasErrors('responseTime')} ? 'is-invalid' : ''"
                                     th:field="*{responseTime}"
@@ -115,7 +118,9 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="passingScore" class="form-label">Passing score:</label>
+                        <label for="passingScore" class="form-label" th:text="#{passingScore}">
+                            Passing score:
+                        </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -136,8 +141,9 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="questionsCount" class="form-label"
-                        >Questions count:</label>
+                        <label for="questionsCount" class="form-label" th:text="#{questionsCount}">
+                            Questions count:
+                        </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -159,7 +165,9 @@
                 </div>
                 <div class="row row-cols-1 row-cols-md-2 mb-2">
                     <div class="col">
-                        <label for="status" class="form-label">Status:</label>
+                        <label for="status" class="form-label" th:text="#{status}">
+                            Status:
+                        </label>
                     </div>
                     <div class="col">
                         <div class="input-group has-validation">
@@ -167,7 +175,7 @@
                                     class="form-control border border-black fs-5"
                                     id="status"
                                     name="status"
-                                    placeholder="(open/closed)"
+                                    th:placeholder="#{openClosed}"
                                     required
                                     th:classappend="${#fields.hasErrors('status')} ? 'is-invalid' : ''"
                                     th:field="*{status}"
@@ -183,7 +191,8 @@
                 <div class="row">
                     <div class="col text-center">
                         <button type="submit"
-                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3">
+                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5 px-5 mt-3"
+                                th:text="#{next}">
                             next
                         </button>
                     </div>
