--- a/src/main/resources/templates/test-join.html
+++ b/src/main/resources/templates/test-join.html
@@ -17,7 +17,7 @@
                         class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
                 >
                     <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white">
+                        <label for="testCode" class="form-label fs-4 text-white" th:text="#{enterTestCode}">
                             Enter Test Code:
                         </label>
                         <input
@@ -28,10 +28,10 @@
                                 placeholder="e.g., r%s12#t^"
                                 required
                         />
-                        <div th:if="${testNotFound}" class="text-warning fs-6">
+                        <div th:if="${testNotFound}" class="text-warning fs-6" th:text="#{testNotFound}">
                             Sorry, we couldn't find this test!
                         </div>
-                        <div th:if="${testClosed}" class="text-warning fs-6">
+                        <div th:if="${testClosed}" class="text-warning fs-6" th:text="#{testClosed}">
                             Sorry, seems like the test is closed!
                         </div>
                         <div class="text-warning fs-6"
@@ -42,6 +42,7 @@
                     <button
                             type="submit"
                             class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
+                            th:text="#{join}"
                     >
                         join
                     </button>
@@ -52,7 +53,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="d-flex flex-column gap-2 bg-secondary rounded shadow border border-black border-2 p-3 d-flex flex-column">
-                                <h3 class="text-white text-center">Previous Results:</h3>
+                                <h3 class="text-white text-center" th:text="#{previousResults}">Previous Results:</h3>
                                 <div class="d-flex bg-light justify-content-around shadow border border-1 border-black rounded p-2 fs-5">
                                     <div class="test-name">MAT #1</div>
                                     <div class="test-name">24.05.24</div>
@@ -81,8 +82,10 @@
                                 <a
                                         class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black border border-black border-2"
                                         href="#"
-                                >show all</a
+                                        th:text="#{showAll}"
                                 >
+                                    show all
+                                </a>
                             </div>
                         </div>
                     </div>
