--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -2,168 +2,144 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
-<div class="d-flex flex-column vh-100 gap-5">
+<div class="d-flex flex-column vh-100 gap-3">
     <div th:replace="~{fragments/headers :: header}"></div>
 
-    <main class="container d-flex justify-content-center flex-grow-1">
-        <div class="row justify-content-around align-items-center flex-fill gap-3">
-            <div class="col-sm-11 col-md-11 col-lg-6">
+    <main class="container d-flex flex-column justify-content-center flex-grow-1 gap-3">
+        <div class="row align-items-center">
+            <div class="col-sm-12 col-lg-8">
                 <h1 class="mb-3" th:text="#{testOfTheDay}">Test of the Day</h1>
                 <div class="bg-secondary rounded shadow border border-2 border-black p-2 fs-5 text-white text-center overflow-auto"
-                     style="height: 545px">
+                     style="height: 570px">
                     <div class="question">
                         <p>1.In Greek mythology, who did Jocasta marry?</p>
                         <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
-                                check
-                            </button>
-                        </div>
-                    </div>
-                    <div class="question">
-                        <p>1.In Greek mythology, who did Jocasta marry?</p>
-                        <div class="d-flex justify-content-center gap-2">
-                            <label for="q1">
-                                <input class="bg-light rounded shadow border border-2 border-black py-1"
-                                       id="q1">
-                            </label>
-                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded" th:text="#{check}">
+                            <input class="bg-light rounded shadow border border-2 border-black py-1 w-75 text-center">
+                            <button class="btn btn-light px-3 border border-black border-2 shadow rounded"
+                                    th:text="#{check}">
                                 check
                             </button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-11 col-md-11 col-lg-5">
-                <h1 class="mb-3" th:text="#{miscellaneous}">Miscellaneous</h1>
-                <div class="bg-secondary shadow rounded border border-2 border-black p-3 text-black flex-column gap-2">
-                    <div class="card shadow mb-2">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="#{randomFact}">Random Fact</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <button class="btn btn-secondary border border-black border-2 shadow rounded" th:text="#{generate}">
-                                Generate
-                            </button>
+            <div class="col-sm-12 col-lg-4">
+                <h1 class="mb-3" th:text="#{testOfTheDay}">Bored?</h1>
+                <div class="text-center p-2 mb-3 bg-secondary border border-2 border-black text-white rounded shadow">
+                    <h2>Click the Button Game</h2>
+                    <p>Click the button as many times as you can in 10 seconds!</p>
+                    <button id="game-button" class="btn btn-light px-3 border border-black border-2 shadow rounded">
+                        Click Me!
+                    </button>
+                    <p class="mt-3">Score: <span id="score" class="score">0</span></p>
+                    <p id="message" class="mt-3"></p>
+                </div>
+                <div class="text-center p-2 bg-secondary border border-2 border-black text-white rounded shadow">
+                    <h2>Guess the Number Game</h2>
+                    <p>Guess a number between 1 and 100!</p>
+                    <input type="number"
+                           id="guess-input"
+                           class="form-control bg-light rounded shadow border border-2 border-black text-center"
+                           placeholder="Enter your guess">
+                    <button id="guess-button"
+                            class="btn btn-light px-3 border border-black border-2 shadow rounded mt-3">
+                        Guess!
+                    </button>
+                    <p class="mt-3 feedback" id="feedback"></p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <h1 class="mb-3" th:text="#{miscellaneous}">Miscellaneous</h1>
+            <div class="col-sm-12 col-md-4">
+                <div id="factsCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-item active">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 1</h5>
+                                <p class="card-text">This is the first joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card shadow mb-2">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="#{randomJoke}">Random Joke</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <button class="btn btn-secondary border border-black border-2 shadow rounded" th:text="#{generate}">
-                                Generate
-                            </button>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 2</h5>
+                                <p class="card-text">This is the second joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card shadow">
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="#{randomQuote}">Random Quote</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.</p>
-                            <button class="btn btn-secondary border border-black border-2 shadow rounded" th:text="#{generate}">
-                                Generate
-                            </button>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 3</h5>
+                                <p class="card-text">This is the third joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <div id="jokesCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-item active">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 1</h5>
+                                <p class="card-text">This is the first joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 2</h5>
+                                <p class="card-text">This is the second joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 3</h5>
+                                <p class="card-text">This is the third joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4">
+                <div id="quotesCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-item active">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 1</h5>
+                                <p class="card-text">This is the first joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 2</h5>
+                                <p class="card-text">This is the second joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="card shadow mb-2">
+                            <div class="card-body">
+                                <h5 class="card-title">Random Joke 3</h5>
+                                <p class="card-text">This is the third joke with supporting text below as a natural
+                                    lead-in to additional content.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -174,6 +150,10 @@
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
-<div th:replace="~{fragments/scripts :: scripts}"></div>
+<script src="/js/clicker-game.js"></script>
+<script src="/js/guess-the-number-game.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
